codec cleanup